myec21.tf
resource "aws_instance" "my-tfec21" {
  ami           = "ami-0d2692b6acea72ee6"
  instance_type = "t2.micro"
  }
